addressed warnings